--- a/public/view/m-member/manage-members.ejs
+++ b/public/view/m-member/manage-members.ejs
@@ -45,9 +45,9 @@
         </i> Inactive Member's <br />
        <span> <b>02</b></span> 
       </button>
-              <button class="btn btn-danger btn-wave me-0">
-                <i class="ri-share-upward-line me-1"></i> Bulk Upload Members
-              </button>
+            <a href="/m/add-member"><button class="btn btn-danger btn-wave me-0">
+              <i class="ri-share-upward-line me-1"></i> Add New Member +
+            </button></a>  
               <button class="btn btn-danger btn-wave me-0">
                 <i class="ri-share-forward-line me-1"></i> Export Members
               </button>
@@ -67,114 +67,95 @@
               <div class="card-title">All Members</div>
               <div class="d-flex gap-3 align-items-center flex-wrap">
                 <div class="btn-group">
-                  <div class="dropdown">
-                    <a
-                      href="javascript:void(0);"
-                      class="btn btn-sm btn-light text-muted dropdown-toggle"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="true"
-                    >
-                      <i class="ti ti-sort-descending-2 me-1"></i>
-                      Region
+                  <div class="dropdown me-2">
+                    <a href="javascript:void(0);"
+                       class="btn btn-sm btn-light text-muted dropdown-toggle"
+                       data-bs-toggle="dropdown"
+                       aria-expanded="true">
+                      <i class="ti ti-sort-descending-2 me-1"></i> Region
                     </a>
-                    <ul class="dropdown-menu" role="menu" data-popper-placement="bottom-end">
-                      <li>
-                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="active">Active</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="inactive">Inactive</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="deleted">Deleted</a>
-                      </li>
-                    </ul>
-                    <a
-                      href="javascript:void(0);"
-                      class="btn btn-sm btn-light text-muted dropdown-toggle"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="true"
-                    >
-                      <i class="ti ti-sort-descending-2 me-1"></i>
-                      Chapter
-                    </a>
-                    <ul class="dropdown-menu" role="menu" data-popper-placement="bottom-end">
-                      <li>
-                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="active">Active</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="inactive">Inactive</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="deleted">Deleted</a>
-                      </li>
-                    </ul>
-                    <a
-                      href="javascript:void(0);"
-                      class="btn btn-sm btn-light text-muted dropdown-toggle"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="true"
-                    >
-                      <i class="ti ti-sort-descending-2 me-1"></i>
-                      Membership
-                    </a>
-                    <ul class="dropdown-menu" role="menu" data-popper-placement="bottom-end">
-                      <li>
-                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="active">1 Year</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="inactive">2 Year</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="deleted">5 Year</a>
-                      </li>
-                    </ul>
-                    <a
-                      href="javascript:void(0);"
-                      class="btn btn-sm btn-light text-muted dropdown-toggle"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="true"
-                    >
-                      <i class="ti ti-sort-descending-2 me-1"></i>
-                      Category
-                    </a>
-                    <ul class="dropdown-menu" role="menu" data-popper-placement="bottom-end">
-                      <li>
-                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="active">1 Year</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="inactive">2 Year</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="deleted">5 Year</a>
-                      </li>
-                    </ul>
-                    <a
-                      href="javascript:void(0);"
-                      class="btn btn-sm btn-light text-muted dropdown-toggle"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="true"
-                    >
-                      <i class="ti ti-sort-descending-2 me-1"></i>
-                      Status
-                    </a>
-                    <ul class="dropdown-menu" role="menu" data-popper-placement="bottom-end">
-                      <li>
-                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="active">Active</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="inactive">Inactive</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="deleted">Deleted</a>
-                      </li>
+                    <ul class="dropdown-menu" id="region-filter" role="menu">
+                      <!-- Items will be dynamically inserted here -->
                     </ul>
                   </div>
-               <a href="/m/add-member"><button
-                class="btn btn-outline-light border"
-                type="button"
-              >
-                + Add New Member
-              </button></a>   
+                
+                  <!-- Chapter Filter -->
+                  <div class="dropdown me-2">
+                    <a href="javascript:void(0);"
+                       class="btn btn-sm btn-light text-muted dropdown-toggle"
+                       data-bs-toggle="dropdown"
+                       aria-expanded="true">
+                      <i class="ti ti-sort-descending-2 me-1"></i> Chapter
+                    </a>
+                    <ul class="dropdown-menu" id="chapter-filter" role="menu">
+                      <!-- Items will be dynamically inserted here -->
+                    </ul>
+                  </div>
+                
+                  <!-- Month Filter -->
+                  <div class="dropdown me-2">
+                    <a href="javascript:void(0);"
+                       class="btn btn-sm btn-light text-muted dropdown-toggle"
+                       data-bs-toggle="dropdown"
+                       aria-expanded="true">
+                      <i class="ti ti-sort-descending-2 me-1"></i> Membership
+                    </a>
+                    <ul class="dropdown-menu" id="membership-filter" role="menu">
+                      <!-- Items will be dynamically inserted here -->
+                    </ul>
+                  </div>
+                
+                  <!-- Payment Type Filter -->
+                  <div class="dropdown me-2">
+                    <a href="javascript:void(0);"
+                       class="btn btn-sm btn-light text-muted dropdown-toggle"
+                       data-bs-toggle="dropdown"
+                       aria-expanded="true">
+                      <i class="ti ti-sort-descending-2 me-1"></i> Category
+                    </a>
+                    <ul class="dropdown-menu" id="category-filter" role="menu">
+                      <!-- Items will be dynamically inserted here -->
+                    </ul>
+                  </div>
+
+                  <div class="dropdown me-2">
+                    <a href="javascript:void(0);"
+                       class="btn btn-sm btn-light text-muted dropdown-toggle"
+                       data-bs-toggle="dropdown"
+                       aria-expanded="true">
+                      <i class="ti ti-sort-descending-2 me-1"></i> Accolades
+                    </a>
+                    <ul class="dropdown-menu" id="accolades-filter" role="menu">
+                      <!-- Items will be dynamically inserted here -->
+                    </ul>
+                  </div>
+
+                  <div class="dropdown me-2">
+                    <a href="javascript:void(0);"
+                       class="btn btn-sm btn-light text-muted dropdown-toggle"
+                       data-bs-toggle="dropdown"
+                       aria-expanded="true">
+                      <i class="ti ti-sort-descending-2 me-1"></i> Status
+                    </a>
+                    <ul class="dropdown-menu" id="status-filter" role="menu">
+                      <!-- Items will be dynamically inserted here -->
+                    </ul>
+                  </div>
+                  <!-- Apply Filter Button -->
+                  <button href=""
+                  id="apply-filters-btn"
+                  class="btn btn-sm btn-primary btn-wave waves-light">
+            Apply Filter
+          </button>
+          <div style="margin-left: 3px;"><button id="reset-filters-btn" class="btn btn-sm btn-danger btn-wave waves-light">
+            Reset Filter
+          </button></div>
+                 <!-- <a href="/m/add-member"><button
+                  class="btn btn-outline-light border"
+                  type="button"
+                >
+                  + Add New Member
+                </button></a>  -->
                 </div>
                 <div class="custom-form-group flex-grow-1">
                   <input
