--- a/public/view/m-training/view-training.ejs
+++ b/public/view/m-training/view-training.ejs
@@ -54,11 +54,6 @@
             <div class="row">
                 <div class="col-xl-12">
                   <div class="card custom-card">
-                    <div class="card custom-card profile-card">
-                    <div class="profile-banner-img">
-                        <img src="../../assets/images/bni-header-full.png" class="card-img-top" alt="...">
-                    </div>
-                </div>
                     <div class="card-body add-products">
                       <div class="row gx-4">
                         <div class="col-xxl-12 col-xl-12 col-lg-12 col-md-6">
@@ -115,7 +110,7 @@
           
                                 <div class="col-xl-6">
                                   <label for="training_ticket_price" class="form-label"
-                                    >Training Venue Price</label
+                                    >Training Venue Fees</label
                                   >
                                   <input
                                     type="text"
@@ -141,23 +136,10 @@
                                     style="background-color: #F0F0F0;"
                                   />
                                 </div>
-                                <div class="col-xl-6">
-                                  <label for="training_note" class="form-label"
-                                    >Training Note</label
-                                  >
-                                  <input
-                                    type="text"
-                                    class="form-control"
-                                    id="training_note"
-                                    name="training_note"
-                                    placeholder="Stock in date.."
-                                    readonly
-                                    style="background-color: #F0F0F0;"
-                                  />
-                                </div>
+                          
                                 <div class="col-xl-6">
                                   <label for="training_published_by" class="form-label"
-                                    >Training Published by</label
+                                    >Training by</label
                                   >
                                   <input
                                     type="text"
@@ -169,16 +151,7 @@
                                     style="background-color: #F0F0F0;"
                                   />
                                 </div>
-                                <div class="col-xl-6">
-                                    <label for="training_status" class="form-label">Training Status</label>
-                                    <select class="form-control" name="training_status" id="training_status" disabled>
-                                      <option value="">Select</option>
-                                      <option value="Scheduled">Scheduled</option>
-                                      <option value="Completed">Completed</option>
-                                      <option value="Postponed">Postponed</option>
-                                      <option value="Cancelled">Cancelled</option>
-                                    </select>
-                                  </div>
+                         
                                   
                               
                                 
@@ -589,7 +562,6 @@ const training_name = document.getElementById('training_name');
 const training_venue = document.getElementById('training_venue');
 const training_ticket_price = document.getElementById('training_ticket_price');
 const training_date = document.getElementById('training_date');
-const training_note = document.getElementById('training_note');
 const training_published_by = document.getElementById('training_published_by');
 const training_status = document.getElementById('training_status');
 
@@ -615,7 +587,6 @@ async function fetchTrainingDetails() {
     training_venue.value = trainingData.training_venue || '';
     training_ticket_price.value = trainingData.training_price || '';
     training_date.value = formatDateForInput(trainingData.training_date) || '';
-    training_note.value = trainingData.training_note || '';
     training_published_by.value = trainingData.training_published_by || '';
     
     // Set the "availability" dropdown
