--- a/public/view/m-kitty-dashboard/kitty-dashboard.ejs
+++ b/public/view/m-kitty-dashboard/kitty-dashboard.ejs
@@ -89,7 +89,7 @@
           <div class="row">
             <div class="col-xl-12">
               <div class="row">
-                <div class="col-xxl-3 col-xl-6">
+                <div class="col-xxl-4 col-xl-6">
                   <div
                     class="card custom-card overflow-hidden main-content-card"
                   >
@@ -119,7 +119,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xxl-3 col-xl-6">
+                <div class="col-xxl-4 col-xl-6">
                   <div
                     class="card custom-card overflow-hidden main-content-card"
                   >
@@ -152,7 +152,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xxl-3 col-xl-6">
+                <div class="col-xxl-4 col-xl-6">
                   <div
                     class="card custom-card overflow-hidden main-content-card"
                   >
@@ -185,7 +185,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-xxl-3 col-xl-6">
+                <div class="col-xxl-4 col-xl-6">
                   <div
                     class="card custom-card overflow-hidden main-content-card"
                   >
@@ -196,6 +196,39 @@
                         <div>
                           <span class="text-muted d-block mb-1 popins"
                             >Total Kitty Received</span
+                          >
+                          <h4 class="fw-medium mb-0 bol">
+                            ₹ <span><b>2,00,000</b></span>
+                          </h4>
+                        </div>
+                        <div class="lh-1">
+                          <span
+                            class="avatar avatar-md avatar-rounded bg-primary2"
+                          >
+                            <i class="ti ti-currency-dollar fs-5"></i>
+                          </span>
+                        </div>
+                      </div>
+                      <!-- <div class="text-muted fs-13">
+                        Increased By
+                        <span class="text-success"
+                          >7.66%<i class="ti ti-arrow-narrow-up fs-16"></i
+                        ></span>
+                      </div> -->
+                    </div>
+                  </div>
+                </div>
+                <div class="col-xxl-4 col-xl-6">
+                  <div
+                    class="card custom-card overflow-hidden main-content-card"
+                  >
+                    <div class="card-body" style="background-color: #e8e8e8">
+                      <div
+                        class="d-flex align-items-start justify-content-between mb-2"
+                      >
+                        <div>
+                          <span class="text-muted d-block mb-1 popins"
+                            >Total Visitor Payment</span
                           >
                           <h4 class="fw-medium mb-0 bol">
                             ₹ <span><b>2,00,000</b></span>
