--- a/public/view/m-training/view-training.ejs
+++ b/public/view/m-training/view-training.ejs
@@ -47,6 +47,21 @@
                     </nav>
                     <h1 class="page-title fw-medium fs-18 mb-0" id="page_title"></h1>
                 </div>
+                <div class="btn-list">
+                  <h6>No. of Registrations: <span style="color: #fb3e4e;" class="registrations"><b>2</b></span></h6>
+                  </div>
+                <div class="btn-list">
+    
+                  <a href="https://bni-data-backend.onrender.com/api/export-transactions"><button
+                    class="btn btn-primary btn-wave me-0"
+                    style="background-color: #fb3e4e!important; border: #fb3e4e"
+                  >
+                    <i class="ri-share-forward-line me-1"></i> Export All
+                    Transactions
+                  </button></a>  
+      
+                
+                  </div>
             </div>
             <!-- Page Header Close -->
 
