--- a/public/view/partials/sidebar.ejs
+++ b/public/view/partials/sidebar.ejs
@@ -360,11 +360,8 @@
                 </ul>
               </li>
 
-              
-
-              <!-- Start::slide -->
-              <li class="slide">
-                <a href="/k/manage-kitty" class="side-menu__item kitty-menu">
+              <li class="slide has-sub">
+                <a href="javascript:void(0);" class="side-menu__item kitty-menu">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     class="w-6 h-6 side-menu__icon"
@@ -376,14 +373,28 @@
                     <path
                       stroke-linecap="round"
                       stroke-linejoin="round"
-                      d="M4.098 19.902a3.75 3.75 0 0 0 5.304 0l6.401-6.402M6.75 21A3.75 3.75 0 0 1 3 17.25V4.125C3 3.504 3.504 3 4.125 3h5.25c.621 0 1.125.504 1.125 1.125v4.072M6.75 21a3.75 3.75 0 0 0 3.75-3.75V8.197M6.75 21h13.125c.621 0 1.125-.504 1.125-1.125v-5.25c0-.621-.504-1.125-1.125-1.125h-4.072M10.5 8.197l2.88-2.88c.438-.439 1.15-.439 1.59 0l3.712 3.713c.44.44.44 1.152 0 1.59l-2.879 2.88M6.75 17.25h.008v.008H6.75v-.008Z"
+                      d="M13.5 16.875h3.375m0 0h3.375m-3.375 0V13.5m0 3.375v3.375M6 10.5h2.25a2.25 2.25 0 0 0 2.25-2.25V6a2.25 2.25 0 0 0-2.25-2.25H6A2.25 2.25 0 0 0 3.75 6v2.25A2.25 2.25 0 0 0 6 10.5Zm0 9.75h2.25A2.25 2.25 0 0 0 10.5 18v-2.25a2.25 2.25 0 0 0-2.25-2.25H6a2.25 2.25 0 0 0-2.25 2.25V18A2.25 2.25 0 0 0 6 20.25Zm9.75-9.75H18a2.25 2.25 0 0 0 2.25-2.25V6A2.25 2.25 0 0 0 18 3.75h-2.25A2.25 2.25 0 0 0 13.5 6v2.25a2.25 2.25 0 0 0 2.25 2.25Z"
                     ></path>
                   </svg>
-
-                  <span class="side-menu__label">Kitty Dashboard</span>
+                  <span class="side-menu__label"
+                    >Kitty  <br />
+                    Management</span
+                  >
+                  <i class="ri-arrow-down-s-line side-menu__angle"></i>
                 </a>
+                <ul class="slide-menu child1">
+                  <li class="slide">
+                    <a href="/k/manage-kitty" class="side-menu__item"
+                      >Kitty Dashboard</a
+                    >
+                  </li>
+                  <li class="slide">
+                    <a href="/k/kitty-management" class="side-menu__item"
+                      >Raise New Bill</a
+                    >
+                  </li>
+                </ul>
               </li>
-              <!-- End::slide -->
 
                                                            <!-- Start::slide -->
                                                            <li class="slide has-sub">
@@ -708,6 +719,7 @@
     "/tr/manage-trainings": ".training-menu",
     "/tr/add-training": ".training-menu",
     "/k/manage-kitty": ".kitty-menu",
+    "/k/kitty-management": ".kitty-menu",
   };
 
   // Mark the active menu and open its dropdown
